[package]
name = "pigi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde"] }
askama_axum = "0.4.0"
axum = "0.7.4"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.24", features = ["stream", "json"] }
futures-core = "0.3.30"
serde_json = "1.0.114"
axum-auth = "0.7.0"
